<resources>
    <string name="app_name">ALL Kotlin</string>
    <string name="pruebas_de_endpoints">Pruebas de Endpoints</string>
    <string name="hay_red">Hay Red?</string>
    <string name="nativo">Nativo</string>
    <string name="http_asinc">Http Asinc</string>
    <string name="okhttp">OkHttp</string>
    <string name="volley">Volley</string>
    <string name="json">json</string>
    <string name="gson">GSON</string>
    <string name="clima_ciudades">CLIMA CIUDADES</string>
    <string name="texto_grados">35°</string>
    <string name="texto_ciudad">Ciudad Mexico</string>
    <string name="texto_estado">Nublado</string>
    <string name="control_listas">Control Listas</string>
    <string name="pruebas_listas">Pruebas Listas</string>
    <string name="listview">ListView</string>
    <string name="listview_personal">ListView Personal</string>
    <string name="gridview">GridView</string>
    <string name="gridviewpersonal">gridviewPersonal</string>
    <string name="grid_view">Grid View Personalizada</string>
</resources>