<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Listas">

    <TextView
        android:id="@+id/tvTituloListas"
        android:layout_width="397dp"
        android:layout_height="37dp"
        android:text="@string/pruebas_listas"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btListView"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="157dp"
        android:layout_height="67dp"
        android:text="@string/listview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloListas"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/btListViewPersonal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="157dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/listview_personal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toEndOf="@+id/btListView"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloListas"
        app:layout_constraintVertical_bias="0.074" />


</androidx.constraintlayout.widget.ConstraintLayout>